08/28/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Changed the messages files to be named the standard ResourceBundle way.
    * Fixed default key binding for exit.
    * Added some new processing for generating jsXe's manual.

08/27/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Updated the launch4j script to set the absolute path of the lib directory
      in the jre option to set the endorsed dirs. This will allow jsXe to be
      launched from anywhere and still be able to find the right version of
      Xerces.
    * Updated the installer to create a script file in unix that uses the java
      in the environment path and use the HotSpot server so that jsXe runs
      faster at the cost of startup time and memory footprint.
    * Added an option to display the full path to a file in the recent files
      menu. Feature Request #1546371

08/21/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Updated russian translation.

08/18/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added a hack to disable view specific actions that aren't implemented by
      the view.

08/17/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Updated the German translation thanks to Dieter Steiner

08/12/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added support for running jsXe in a wrapped exe using launch4j.
    * Added an installer for jsXe. The installer can be packaged in an exe for
      easy use by windows users.
    * Moved the windows integration into it's own component in the installer so
      that it won't be installed on systems other than Windows.

08/09/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added a new option to the Global Options dialog for the number of undo
      operations to remember.

08/08/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added undo/redo support for attributes.

08/07/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added temporary support for undo to jsXe.